--- a/app/styles/shared-styles.html
+++ b/app/styles/shared-styles.html
@@ -38,172 +38,232 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       .flex5child {
         @apply --layout-flex-5;
       }
-      ::-webkit-scrollbar {width:5px;}
-      ::-webkit-scrollbar-track {background-color:transparent;}
-      ::-webkit-scrollbar-thumb {background-color:rgba(0,0,0,.2);}
-      ::-webkit-scrollbar-thumb:hover {background-color:#49a8df;}
 
-      ::shadow things-resource-grid::shadow div.grid{
-        background-color:#fff;
-        border-radius:4px;
-        overflow:hidden;
-        -webkit-box-shadow: 1px 1px 3px 0px rgba(0,0,0,0.2);
-        -moz-box-shadow: 1px 1px 3px 0px rgba(0,0,0,0.2);
-        box-shadow: 1px 1px 3px 0px rgba(0,0,0,0.2);
+      ::-webkit-scrollbar {
+        width: 5px;
       }
-      ::shadow things-resource-grid paper-toolbar{
-        background-color:transparent !important
+
+      ::-webkit-scrollbar-track {
+        background-color: transparent;
       }
-      ::shadow #account+div.things-profile{
-        display:inline-block;
-        position:relative;
-        top:1px;left:-3px;
+
+      ::-webkit-scrollbar-thumb {
+        background-color: rgba(0, 0, 0, .2);
       }
-      ::shadow input[disabled]{
-        background-color:#f4f4f4;
-        border:1px solid rgba(0,0,0,.1);
-        color:#888
+
+      ::-webkit-scrollbar-thumb:hover {
+        background-color: #49a8df;
       }
-      ::shadow things-search-form{
-        margin:15px 15px 0 15px;
+
+      ::shadow things-resource-grid::shadow div.grid {
+        background-color: #fff;
+        border-radius: 4px;
+        overflow: hidden;
+        -webkit-box-shadow: 1px 1px 3px 0px rgba(0, 0, 0, 0.2);
+        -moz-box-shadow: 1px 1px 3px 0px rgba(0, 0, 0, 0.2);
+        box-shadow: 1px 1px 3px 0px rgba(0, 0, 0, 0.2);
+      }
+
+      ::shadow things-resource-grid paper-toolbar {
+        background-color: transparent !important
+      }
+
+      ::shadow #account+div.things-profile {
+        display: inline-block;
+        position: relative;
+        top: 1px;
+        left: -3px;
+      }
+
+      ::shadow input[disabled] {
+        background-color: #f4f4f4;
+        border: 1px solid rgba(0, 0, 0, .1);
+        color: #888
+      }
+
+      ::shadow things-search-form {
+        margin: 15px 15px 0 15px;
         background-color: var(--things-primary-color);
         @apply --things-default-border-radius;
       }
 
-      ::shadow things-selector-form{
-        margin:15px 15px 0 15px;
+      ::shadow things-selector-form {
+        margin: 15px 15px 0 15px;
         background-color: var(--things-primary-color);
         @apply --things-default-border-radius;
       }
 
-      ::shadow paper-material.things-selector-form label.things-input-field, ::shadow paper-material.things-selector-form label.things-combo, ::shadow paper-material.things-selector-form label.things-number-field,
-      ::shadow paper-material.things-selector-form label.things-resource-selector,::shadow paper-material.things-selector-form label.things-tristate-radio,
+      ::shadow paper-material.things-selector-form label.things-input-field,
+      ::shadow paper-material.things-selector-form label.things-combo,
+      ::shadow paper-material.things-selector-form label.things-number-field,
+      ::shadow paper-material.things-selector-form label.things-resource-selector,
+      ::shadow paper-material.things-selector-form label.things-tristate-radio,
       ::shadow paper-material.things-selector-form label.things-resource-format-selector {
-        color:var(--things-dark-text-color);
+        color: var(--things-dark-text-color);
       }
 
-      ::shadow paper-material.things-selector-form iron-icon.things-combo, ::shadow paper-material.things-selector-form .picker,::shadow paper-material.things-selector-form iron-icon.things-resource-selector,
+      ::shadow paper-material.things-selector-form iron-icon.things-combo,
+      ::shadow paper-material.things-selector-form .picker,
+      ::shadow paper-material.things-selector-form iron-icon.things-resource-selector,
       ::shadow paper-material.things-selector-form iron-icon.things-resource-format-selector {
-        height:24px;
+        height: 24px;
         background-color: #5d5d5d;
-      }
-      ::shadow paper-material.things-selector-form .picker{
-        top:2px;
-      }
-      ::shadow paper-material.things-selector-form  .things-input-field,::shadow paper-material.things-selector-form  .things-combo,::shadow paper-material.things-selector-form input.things-resource-selector{
-        border:none
-      }
-      ::shadow paper-fab.things-selector-form{
-        margin-right:-15px;
-      }
-      ::shadow paper-material.things-selector-form things-tristate-radio{
-        color:#fff;
-        margin-top: 4px;
-      }
-      ::shadow paper-material.things-selector-form things-tristate-radio input{
-        margin-right:7px;
       }
 
-      ::shadow paper-material.things-search-form label.things-input-field, ::shadow paper-material.things-search-form label.things-combo, ::shadow paper-material.things-search-form label.things-number-field,
-      ::shadow paper-material.things-search-form label.things-resource-selector,::shadow paper-material.things-search-form label.things-tristate-radio,
-      ::shadow paper-material.things-search-form label.things-resource-format-selector {
-        color:var(--things-dark-text-color);
+      ::shadow paper-material.things-selector-form .picker {
+        top: 2px;
       }
-      ::shadow paper-material.things-search-form iron-icon.things-combo, ::shadow paper-material.things-search-form .picker,::shadow paper-material.things-search-form iron-icon.things-resource-selector,
-      ::shadow paper-material.things-search-form iron-icon.things-resource-format-selector {
-        height:24px;
-        background-color: #5d5d5d;
+
+      ::shadow paper-material.things-selector-form .things-input-field,
+      ::shadow paper-material.things-selector-form .things-combo,
+      ::shadow paper-material.things-selector-form input.things-resource-selector {
+        border: none
       }
-      ::shadow paper-material.things-search-form .picker{
-        top:2px;
+
+      ::shadow paper-fab.things-selector-form {
+        margin-right: -15px;
       }
-      ::shadow paper-material.things-search-form  .things-input-field,::shadow paper-material.things-search-form  .things-combo,::shadow paper-material.things-search-form input.things-resource-selector{
-        border:none
-      }
-      ::shadow paper-fab.things-search-form{
-        margin-right:-15px;
-      }
-      ::shadow paper-material.things-search-form things-tristate-radio{
-        color:#fff;
+
+      ::shadow paper-material.things-selector-form things-tristate-radio {
+        color: #fff;
         margin-top: 4px;
       }
-      ::shadow paper-material.things-search-form things-tristate-radio input{
-        margin-right:7px;
+
+      ::shadow paper-material.things-selector-form things-tristate-radio input {
+        margin-right: 7px;
+      }
+
+      ::shadow paper-material.things-search-form label.things-input-field,
+      ::shadow paper-material.things-search-form label.things-combo,
+      ::shadow paper-material.things-search-form label.things-number-field,
+      ::shadow paper-material.things-search-form label.things-resource-selector,
+      ::shadow paper-material.things-search-form label.things-tristate-radio,
+      ::shadow paper-material.things-search-form label.things-resource-format-selector {
+        color: var(--things-dark-text-color);
+      }
+
+      ::shadow paper-material.things-search-form iron-icon.things-combo,
+      ::shadow paper-material.things-search-form .picker,
+      ::shadow paper-material.things-search-form iron-icon.things-resource-selector,
+      ::shadow paper-material.things-search-form iron-icon.things-resource-format-selector {
+        height: 24px;
+        background-color: #5d5d5d;
+      }
+
+      ::shadow paper-material.things-search-form .picker {
+        top: 2px;
+      }
+
+      ::shadow paper-material.things-search-form .things-input-field,
+      ::shadow paper-material.things-search-form .things-combo,
+      ::shadow paper-material.things-search-form input.things-resource-selector {
+        border: none
+      }
+
+      ::shadow paper-fab.things-search-form {
+        margin-right: -15px;
+      }
+
+      ::shadow paper-material.things-search-form things-tristate-radio {
+        color: #fff;
+        margin-top: 4px;
+      }
+
+      ::shadow paper-material.things-search-form things-tristate-radio input {
+        margin-right: 7px;
       }
 
       ::shadow paper-fab {
         margin-right: -10px !important;
       }
 
-      ::shadow paper-fab iron-icon{
-        width:25px;height:25px;
+      ::shadow paper-fab iron-icon {
+        width: 25px;
+        height: 25px;
       }
 
 
 
-      ::shadow things-button-bar paper-button.things-button:hover{
+      ::shadow things-button-bar paper-button.things-button:hover {
         @apply --things-button-hover;
       }
-      ::shadow things-button-bar paper-button.things-button[pressed]{
+
+      ::shadow things-button-bar paper-button.things-button[pressed] {
         @apply --things-button-active;
       }
-      ::shadow a.things-paginator,::shadow .page-info.things-paginator,::shadow .total-info.things-paginator{
-        color:var(--things-dark-desc-text-color) !important;
+
+      ::shadow a.things-paginator,
+      ::shadow .page-info.things-paginator,
+      ::shadow .total-info.things-paginator {
+        color: var(--things-dark-desc-text-color) !important;
       }
-      ::shadow .total-info.things-paginator strong.things-paginator{
-        color:var(--things-secondary-color);
+
+      ::shadow .total-info.things-paginator strong.things-paginator {
+        color: var(--things-secondary-color);
       }
-      
-      ::shadow span.subtitle+things-resource-grid,::shadow span.subtitle+div things-resource-grid{
-        padding-top:0 !important
+
+      ::shadow span.subtitle+things-resource-grid,
+      ::shadow span.subtitle+div things-resource-grid {
+        padding-top: 0 !important
       }
-      ::shadow span.subtitle{
-        padding-bottom:4px !important
+
+      ::shadow span.subtitle {
+        padding-bottom: 4px !important
       }
-      ::shadow .ratio1.things-layout-hera{
-        margin-right:0
+
+      ::shadow .ratio1.things-layout-hera {
+        margin-right: 0
       }
-      ::shadow .layout-content paper-tabs{
-        width:calc(100% - 15px);height:35px;
-        color:var(--things-sidebar-text-color);
+
+      ::shadow .layout-content paper-tabs {
+        width: calc(100% - 15px);
+        height: 35px;
+        color: var(--things-sidebar-text-color);
       }
-      ::shadow .layout-content paper-tabs .iron-selected div{
-        color:#fff;
-        font-weight:bold;
+
+      ::shadow .layout-content paper-tabs .iron-selected div {
+        color: #fff;
+        font-weight: bold;
       }
-      ::shadow #rightContent things-resource-grid{
-        padding-left:0
+
+      ::shadow #rightContent things-resource-grid {
+        padding-left: 0
       }
-      ::shadow things-home{
-        background-color:transparent
+
+      ::shadow things-home {
+        background-color: transparent
       }
-      ::shadow #tabPages things-form{
+
+      ::shadow #tabPages things-form {
         @apply --things-default-border-radius;
-        background-color:#fff;
-        width:calc(100% - 15px);
-        max-height:calc(100% - 15px);
+        background-color: #fff;
+        width: calc(100% - 15px);
+        max-height: calc(100% - 15px);
       }
-      ::shadow div.brand::before{
-        content:"";
-        display:inline-block;
+
+      ::shadow div.brand::before {
+        content: "";
+        display: inline-block;
         position: relative;
-        top:5px;
-        width:30px;height:30px;
+        top: 5px;
+        width: 30px;
+        height: 30px;
         /*background:url('/images/icon-brand.png') no-repeat;*/
-        background:none;
-        background-size:25px;
+        background: none;
+        background-size: 25px;
       }
-      ::shadow .dropdown-content.things-combo{
-        box-shadow: 0px 0px 7px 0px rgba(0,0,0,0.4);
+
+      ::shadow .dropdown-content.things-combo {
+        box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.4);
       }
-      ::shadow paper-material.things-search-form  paper-item.things-combo{
-        border-bottom: 1px solid rgba(0, 0, 0, .1) !important;
-      }
-      ::shadow paper-material.things-selector-form  paper-item.things-combo{
+
+      ::shadow paper-material.things-search-form paper-item.things-combo {
         border-bottom: 1px solid rgba(0, 0, 0, .1) !important;
       }
 
-
+      ::shadow paper-material.things-selector-form paper-item.things-combo {
+        border-bottom: 1px solid rgba(0, 0, 0, .1) !important;
+      }
     </style>
   </template>
 </dom-module>
