--- a/app/by_pass.html
+++ b/app/by_pass.html
@@ -12,6 +12,7 @@ Copyright © HatioLab Inc. All rights reserved.
 
 <head>
   <meta charset="UTF-8" />
+  <meta name="referrer" content="unsafe-url">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="shortcut icon" href="./images/icon-shortcut.png" type="image/x-icon" />
